# Jyowo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  design-qa.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.check.conf.json  tauri.conf.json
crates/jyowo-harness-agent-runtime/: Cargo.toml
crates/jyowo-harness-agent-runtime/src/: background.rs  isolation.rs  lib.rs  migrations.rs  policy.rs  profiles.rs  schema.rs  store.rs  subagents.rs  teams.rs
crates/jyowo-harness-agent-runtime/tests/: agent_orchestration_background.rs  agent_orchestration_background_permission.rs  agent_orchestration_isolation.rs  agent_orchestration_policy.rs  agent_orchestration_profiles.rs  agent_runtime_store.rs  agents_team.rs  subagents.rs
crates/jyowo-harness-budget/: Cargo.toml
crates/jyowo-harness-budget/src/: lib.rs
crates/jyowo-harness-budget/tests/: budget_contract.rs
crates/jyowo-harness-context/: Cargo.toml  README.md
crates/jyowo-harness-context/src/: buffer.rs  engine.rs  lib.rs  prompt.rs
crates/jyowo-harness-context/tests/: compact.rs  context_patches.rs  contract.rs  engine.rs  memory_recall.rs  stages.rs
crates/jyowo-harness-contracts/: Cargo.toml  README.md
crates/jyowo-harness-contracts/examples/: export_daemon_schema.rs
crates/jyowo-harness-contracts/src/: announcement.rs  automation.rs  blob.rs  capability.rs  conversation.rs  daemon.rs  deferred_tools.rs  diagnostics.rs  enums.rs  errors.rs  global_config.rs  ids.rs  lib.rs  messages.rs  model_capability.rs  model_options.rs  model_settings.rs  plugin_product.rs  process_monitor.rs  redactor.rs  runtime_execution_status.rs  scheduled_task.rs  schema_export.rs  tool.rs  tool_profile.rs
crates/jyowo-harness-contracts/tests/: agent_orchestration_contracts.rs  announcement_renderer.rs  authorization_contracts.rs  automation_contract.rs  capability_mock.rs  capability_testing.rs  conversation_workbench_contract.rs  core_contracts.rs  daemon_contract.rs  daemon_runtime_contract.rs  diagnostics_contract.rs  m1_contracts.rs  memory_error_contract.rs  memory_platform_contracts.rs  model_settings.rs  plugin_product_contracts.rs  process_monitor_contract.rs  provider_capability_routes.rs  scheduled_task_contract.rs  subagent_context_report.rs  tool_contracts.rs  tool_profile_contract.rs
crates/jyowo-harness-daemon/: Cargo.toml
crates/jyowo-harness-daemon/src/: agent_starters.rs  automation.rs  browser_service.rs  checkpoint.rs  lib.rs  lifecycle.rs  memory_service.rs  permission_broker.rs  provider_config.rs  question_broker.rs  queue.rs  recovery.rs  reference_candidates.rs  run_coordinator.rs  runtime_config.rs  runtime_service.rs  scheduled_task.rs  sdk_run_factory.rs  subagent.rs  supervisor.rs  task_actor.rs  workspace.rs
crates/jyowo-harness-daemon/tests/: agent_starters.rs  automation_scheduler.rs  concurrency.rs  context_compaction.rs  fault_injection.rs  ipc.rs  lifecycle.rs  memory_service.rs  performance.rs  permission_routing.rs  provider_config.rs  queue_state_machine.rs  recovery.rs  runtime_config.rs  runtime_service.rs  scheduled_task_scheduler.rs  skill_context_flow.rs  steering.rs  subagent_actor.rs  task_actor.rs  workspace_coordinator.rs
crates/jyowo-harness-engine/: Cargo.toml  README.md
crates/jyowo-harness-engine/src/: capability_assembly.rs  engine.rs  lib.rs  runner.rs  safe_point.rs  turn.rs  turn_assembly.rs
crates/jyowo-harness-engine/tests/: authorization_support.rs  capability.rs  context_emergency_compact.rs  contract.rs  deepseek_tool_replay_regression.rs  e2e_engine.rs  execute_code.rs  hook_context.rs  hook_pipeline.rs  interrupt.rs  main_loop.rs  memory_lifecycle.rs  minimax_tool_replay_regression.rs  permission.rs  permission_hooks.rs  provider_continuation_leak.rs  provider_continuation_runtime.rs  safe_point.rs  steering.rs  subagent_tool_feature.rs  turn_assembly.rs  usage.rs
crates/jyowo-harness-execution/: Cargo.toml
crates/jyowo-harness-execution/src/: audit.rs  error.rs  event_sink.rs  http_broker.rs  lib.rs  preflight_registry.rs  service.rs  ticket.rs
crates/jyowo-harness-execution/tests/: authorization_flow.rs  authorization_preflight_channels.rs  http_broker.rs  ticket.rs
crates/jyowo-harness-fs/: Cargo.toml
crates/jyowo-harness-fs/src/: lib.rs
crates/jyowo-harness-hook/: Cargo.toml  README.md
crates/jyowo-harness-hook/src/: dispatcher.rs  handler.rs  lib.rs  registry.rs
crates/jyowo-harness-hook/tests/: api_contract.rs  contract.rs  dispatcher.rs  exec.rs  exec_transport.rs  in_process.rs  registry_dispatcher.rs  replay_idempotence_regression.rs
crates/jyowo-harness-journal/: Cargo.toml  README.md
crates/jyowo-harness-journal/src/: blob.rs  conversation_read_model.rs  conversation_worktree_projector.rs  evidence.rs  jsonl.rs  lib.rs  memory.rs  projection.rs  retention.rs  snapshot.rs  sqlite.rs  store.rs  task_blob.rs  task_commands_tests.rs  task_event.rs  task_event_adapter.rs  task_projection.rs  task_projection_tests.rs  task_schema.rs  task_store.rs  task_store_tests.rs  testing.rs  version.rs
crates/jyowo-harness-journal/tests/: audit.rs  contract.rs  conversation_read_model.rs  conversation_workbench_projection.rs  conversation_worktree_projector.rs  evidence_ref_retention.rs  (+10 more)
crates/jyowo-harness-mcp/: Cargo.toml  README.md
crates/jyowo-harness-memory/: Cargo.toml  README.md
crates/jyowo-harness-model/: Cargo.toml  README.md
crates/jyowo-harness-observability/: Cargo.toml  README.md
crates/jyowo-harness-permission/: Cargo.toml  README.md
crates/jyowo-harness-plugin/: Cargo.toml  README.md
crates/jyowo-harness-provider-state/: Cargo.toml
crates/jyowo-harness-sandbox/: Cargo.toml  README.md
crates/jyowo-harness-sdk/: Cargo.toml  README.md
crates/jyowo-harness-session/: Cargo.toml  README.md
crates/jyowo-harness-skill/: Cargo.toml  README.md
crates/jyowo-harness-subagent/: Cargo.toml  README.md
crates/jyowo-harness-team/: Cargo.toml  README.md
crates/jyowo-harness-tool/: Cargo.toml  README.md
crates/jyowo-harness-tool-search/: Cargo.toml  README.md
(+1292 files in other folders)
