[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/jyowo-harness-budget",
  "crates/jyowo-harness-context",
  "crates/jyowo-harness-contracts",
  "crates/jyowo-harness-engine",
  "crates/jyowo-harness-hook",
  "crates/jyowo-harness-journal",
  "crates/jyowo-harness-mcp",
  "crates/jyowo-harness-memory",
  "crates/jyowo-harness-model",
  "crates/jyowo-harness-observability",
  "crates/jyowo-harness-permission",
  "crates/jyowo-harness-plugin",
  "crates/jyowo-harness-sandbox",
  "crates/jyowo-harness-sdk",
  "crates/jyowo-harness-session",
  "crates/jyowo-harness-skill",
  "crates/jyowo-harness-subagent",
  "crates/jyowo-harness-team",
  "crates/jyowo-harness-tool",
  "crates/jyowo-harness-tool-search",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.78"

[workspace.dependencies]
async-stream = "0.3.6"
arc-swap = "1.9.1"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http1", "json", "macros", "tokio"] }
base64 = "0.22"
bytes = "1.11.1"
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.32"
fs2 = "0.4.3"
globset = "0.4.18"
http = "1.4.0"
ignore = "0.4.25"
jsonschema = "0.33.0"
jsonwebtoken = "9.3.1"
libloading = "0.8"
log = "0.4.29"
notify = "8.2.0"
once_cell = "1"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = "0.27"
prometheus = "0.13"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
reqwest-eventsource = "0.6"
ring = "0.17.14"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
secrecy = "0.8.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
tauri = "2.10.3"
tauri-build = "2.5.6"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = "0.24"
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-opentelemetry = "0.28"
ulid = { version = "1.2.1", features = ["serde"] }
unicode-normalization = "0.1.25"
url = "2.5.7"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
yaml-rust2 = "0.8"
zeroize = "1.8.2"

[profile.release]
strip = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
assigning_clones = "allow"
assertions_on_constants = "allow"
bool_to_int_with_if = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
case_sensitive_file_extension_comparisons = "allow"
cloned_ref_to_slice_refs = "allow"
format_in_format_args = "allow"
items_after_test_module = "allow"
map_unwrap_or = "allow"
manual_let_else = "allow"
manual_string_new = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
question_mark = "allow"
redundant_closure_for_method_calls = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unnecessary_join = "allow"
unnecessary_to_owned = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
unused_self = "allow"
useless_conversion = "allow"
wildcard_imports = "allow"
