[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/jyowo-harness-agent-runtime",
  "crates/jyowo-harness-budget",
  "crates/jyowo-harness-context",
  "crates/jyowo-harness-contracts",
  "crates/jyowo-harness-daemon",
  "crates/jyowo-harness-engine",
  "crates/jyowo-harness-fs",
  "crates/jyowo-harness-execution",
  "crates/jyowo-harness-hook",
  "crates/jyowo-harness-journal",
  "crates/jyowo-harness-mcp",
  "crates/jyowo-harness-memory",
  "crates/jyowo-harness-model",
  "crates/jyowo-harness-observability",
  "crates/jyowo-harness-permission",
  "crates/jyowo-harness-plugin",
  "crates/jyowo-harness-provider-state",
  "crates/jyowo-harness-sandbox",
  "crates/jyowo-harness-sdk",
  "crates/jyowo-harness-session",
  "crates/jyowo-harness-skill",
  "crates/jyowo-harness-subagent",
  "crates/jyowo-harness-team",
  "crates/jyowo-harness-tool",
  "crates/jyowo-harness-tool-search",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.96"

[workspace.dependencies]
async-stream = "0.3.6"
arc-swap = "1.9.1"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http1", "json", "macros", "tokio"] }
base64 = "0.22.1"
bytes = "1.11.1"
blake3 = "1.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
iana-time-zone = "0.1.64"
dashmap = "6.2.1"
futures = "0.3.32"
fs2 = "0.4.3"
globset = "0.4.18"
http = "1.4.2"
ignore = "0.4.26"
insta = "1.48.0"
jsonschema = "0.47.0"
jsonwebtoken = "10.4.0"
keyring = "4.1.4"
libloading = "0.9.0"
libc = "0.2.186"
log = "0.4.32"
notify = "8.2.0"
nix = { version = "0.31.3", features = ["signal"] }
once_cell = "1.21.4"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.1"
oxideav-avif = { version = "0.0.10", default-features = false }
portable-pty = "0.9.0"
prometheus = "0.14.0"
proptest = "1.11.0"
refinery = { version = "0.9.2", default-features = false, features = ["rusqlite"] }
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
ring = "0.17.14"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rustix = { version = "1.1.4", features = ["fs", "std"] }
rust_decimal = { version = "1.42.1", features = ["serde"] }
schemars = { version = "1.2.1", features = ["chrono04", "uuid1"] }
secrecy = "0.10.3"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.28.0", features = ["derive"] }
tauri = "2.11.2"
tauri-build = "2.6.2"
tauri-plugin-dialog = "2.4.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.3"
tauri-plugin-updater = "2.10.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = "0.30.0"
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
ulid = { version = "1.2.1", features = ["serde"] }
unicode-normalization = "0.1.25"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
yaml-rust2 = "0.11.0"
zeroize = "1.9.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
strip = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
assigning_clones = "allow"
assertions_on_constants = "allow"
bool_to_int_with_if = "allow"
bool_assert_comparison = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
case_sensitive_file_extension_comparisons = "allow"
clone_on_copy = "allow"
cloned_ref_to_slice_refs = "allow"
collapsible_if = "allow"
cmp_owned = "allow"
default_trait_access = "allow"
derivable_impls = "allow"
doc_markdown = "allow"
duplicate_mod = "allow"
duration_suboptimal_units = "allow"
excessive_precision = "allow"
explicit_auto_deref = "allow"
explicit_iter_loop = "allow"
filter_map_bool_then = "allow"
field_reassign_with_default = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
format_in_format_args = "allow"
format_collect = "allow"
format_push_string = "allow"
ignored_unit_patterns = "allow"
if_not_else = "allow"
implicit_clone = "allow"
items_after_statements = "allow"
items_after_test_module = "allow"
large_futures = "allow"
large_enum_variant = "allow"
let_and_return = "allow"
map_unwrap_or = "allow"
manual_assert = "allow"
manual_contains = "allow"
manual_let_else = "allow"
manual_is_multiple_of = "allow"
manual_string_new = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
needless_continue = "allow"
needless_lifetimes = "allow"
needless_raw_string_hashes = "allow"
needless_pass_by_value = "allow"
needless_return = "allow"
new_without_default = "allow"
nonminimal_bool = "allow"
option_as_ref_cloned = "allow"
option_option = "allow"
question_mark = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
ref_option = "allow"
result_large_err = "allow"
result_unit_err = "allow"
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow"
similar_names = "allow"
single_match = "allow"
single_match_else = "allow"
struct_field_names = "allow"
struct_excessive_bools = "allow"
trivially_copy_pass_by_ref = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnested_or_patterns = "allow"
unnecessary_cast = "allow"
unnecessary_find_map = "allow"
unnecessary_join = "allow"
unnecessary_lazy_evaluations = "allow"
unnecessary_literal_bound = "allow"
unnecessary_map_or = "allow"
unnecessary_to_owned = "allow"
unnecessary_wraps = "allow"
unwrap_or_default = "allow"
unused_async = "allow"
unused_self = "allow"
unreadable_literal = "allow"
used_underscore_binding = "allow"
useless_conversion = "allow"
vec_init_then_push = "allow"
wildcard_imports = "allow"
