[package]
name = "jyowo-harness-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_contracts"
doctest = false

[lints]
workspace = true

[features]
default = []
testing = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
serde_yaml = "0.9.34"
