[package]
name = "jyowo-harness-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_daemon"
doctest = false

[lints]
workspace = true

[dependencies]
jyowo-harness-agent-runtime = { path = "../jyowo-harness-agent-runtime" }
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-engine = { path = "../jyowo-harness-engine" }
jyowo-harness-fs = { path = "../jyowo-harness-fs" }
jyowo-harness-journal = { path = "../jyowo-harness-journal", features = ["sqlite", "blob-file"] }
jyowo-harness-sdk = { path = "../jyowo-harness-sdk" }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustix = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
