[package]
name = "jyowo-harness-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_engine"
doctest = false

[lints]
workspace = true

[features]
default = []
subagent-tool = ["dep:jyowo-harness-subagent"]
parallel-tools = []
steering = ["jyowo-harness-session/steering"]
recall-memory = [
    "jyowo-harness-context/recall-memory",
    "jyowo-harness-memory/provider-registry",
    "jyowo-harness-session/recall-memory",
]
programmatic-tool-calling = [
    "jyowo-harness-sandbox/code-runtime",
    "jyowo-harness-tool/programmatic-tool-calling",
]

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-context = { path = "../jyowo-harness-context" }
jyowo-harness-execution = { path = "../jyowo-harness-execution" }
jyowo-harness-hook = { path = "../jyowo-harness-hook" }
jyowo-harness-journal = { path = "../jyowo-harness-journal" }
jyowo-harness-mcp = { path = "../jyowo-harness-mcp" }
jyowo-harness-memory = { path = "../jyowo-harness-memory" }
jyowo-harness-model = { path = "../jyowo-harness-model" }
jyowo-harness-observability = { path = "../jyowo-harness-observability" }
jyowo-harness-permission = { path = "../jyowo-harness-permission" }
jyowo-harness-provider-state = { path = "../jyowo-harness-provider-state" }
jyowo-harness-sandbox = { path = "../jyowo-harness-sandbox" }
jyowo-harness-session = { path = "../jyowo-harness-session" }
jyowo-harness-skill = { path = "../jyowo-harness-skill" }
jyowo-harness-subagent = { path = "../jyowo-harness-subagent", optional = true }
jyowo-harness-tool = { path = "../jyowo-harness-tool" }
jyowo-harness-tool-search = { path = "../jyowo-harness-tool-search" }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
bytes = { workspace = true }
jyowo-harness-journal = { path = "../jyowo-harness-journal", features = ["in-memory"] }
jyowo-harness-tool = { path = "../jyowo-harness-tool", features = ["builtin-toolset"] }
parking_lot = "0.12.5"
rust_decimal = { workspace = true }
tempfile = { workspace = true }
