[package]
name = "jyowo-harness-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_journal"
doctest = false

[lints]
workspace = true

[features]
default = []
sqlite = ["dep:rusqlite"]
jsonl = ["dep:fs2"]
in-memory = []
testing = ["in-memory"]
blob-file = []
blob-sqlite = ["sqlite"]

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
