[package]
name = "jyowo-harness-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_mcp"
doctest = false

[lints]
workspace = true

[features]
default = []
stdio = ["dep:nix", "tokio/io-util", "tokio/process"]
http = ["dep:reqwest"]
websocket = ["dep:tokio-tungstenite", "tokio/net"]
sse = ["dep:reqwest"]
in-process = []
server-adapter = ["dep:axum", "tokio/io-std", "tokio/io-util"]
oauth = ["dep:jsonwebtoken", "dep:reqwest", "dep:ring"]

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-execution = { path = "../jyowo-harness-execution" }
jyowo-harness-permission = { path = "../jyowo-harness-permission" }
jyowo-harness-sandbox = { path = "../jyowo-harness-sandbox" }
jyowo-harness-tool = { path = "../jyowo-harness-tool" }
async-trait = { workspace = true }
async-stream = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
jsonwebtoken = { workspace = true, optional = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
url = { workspace = true }
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true, features = ["rustls-tls-native-roots"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, optional = true }

[dev-dependencies]
jyowo-harness-sandbox = { path = "../jyowo-harness-sandbox", features = ["noop"] }
axum = { workspace = true }
parking_lot = "0.12.5"
wiremock = "0.6.5"
