[package]
name = "jyowo-harness-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_memory"
doctest = false

[lints]
workspace = true

[features]
default = ["builtin", "threat-scanner"]
builtin = ["dep:fastrand", "dep:fs2", "dep:sha2"]
provider-registry = []
threat-scanner = ["dep:regex", "dep:toml"]
consolidation = []

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
fastrand = { version = "2.4.1", optional = true }
fs2 = { version = "0.4.3", optional = true }
regex = { version = "1.12.4", optional = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { version = "0.11.0", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
parking_lot = "0.12.5"
tempfile = { workspace = true }
