[package]
name = "jyowo-harness-model"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_model"
doctest = false

[lints]
workspace = true

[features]
default = ["rate-limit-observer"]
rate-limit-observer = []
oauth = []
redactor = []
otel = []
http-client = ["dep:reqwest"]
openai-protocol = ["http-client"]
openai = ["openai-protocol"]
anthropic = ["http-client"]
gemini = ["http-client"]
openrouter = ["openai-protocol"]
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
codex = ["openai-protocol"]
local-llama = ["openai-protocol"]
deepseek = ["openai-protocol"]
minimax = ["openai-protocol"]
qwen = ["openai-protocol", "anthropic"]
doubao = ["openai-protocol"]
zhipu = ["openai-protocol"]
km = ["openai-protocol"]
all-providers = [
  "openai",
  "anthropic",
  "gemini",
  "openrouter",
  "bedrock",
  "codex",
  "local-llama",
  "deepseek",
  "minimax",
  "qwen",
  "doubao",
  "zhipu",
  "km",
]
cassette = []
testing = []

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-provider-state = { path = "../jyowo-harness-provider-state" }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
parking_lot = "0.12.5"
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true, optional = true }
aws-config = { version = "1.8.18", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"], optional = true }
aws-sdk-bedrockruntime = { version = "1.135.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"], optional = true }
aws-smithy-types = { version = "1.5.0", optional = true }

[dev-dependencies]
bytes = { workspace = true }
wiremock = "0.6.5"
