[package]
name = "jyowo-harness-permission"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
name = "harness_permission"
doctest = false

[lints]
workspace = true

[features]
default = []
dangerous = ["dep:regex", "dep:strip-ansi-escapes", "dep:unicode-normalization"]
integrity = ["dep:bytes", "dep:ring", "dep:serde_json", "dep:zeroize"]
interactive = []
stream = ["dep:dashmap"]
rule-engine = ["dangerous", "dep:arc-swap", "dep:notify", "dep:serde_json", "dep:tokio-stream", "dep:toml"]
testing = []
auto-mode = ["dep:jyowo-harness-model", "dep:serde_json"]

[dependencies]
jyowo-harness-contracts = { path = "../jyowo-harness-contracts" }
jyowo-harness-model = { path = "../jyowo-harness-model", optional = true }
arc-swap = { workspace = true, optional = true }
async-trait = { workspace = true }
blake3 = "1.8.5"
bytes = { workspace = true, optional = true }
chrono = { workspace = true }
dashmap = { workspace = true, optional = true }
futures = { workspace = true }
notify = { workspace = true, optional = true }
parking_lot = "0.12.5"
regex = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
strip-ansi-escapes = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
unicode-normalization = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
